--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@
     font-style: normal;
     font-stretch: normal;
     src: url('Dosis-VariableFont_wght.ttf') format('truetype');
+}
+
+@font-face{
+    font-family: 'Spartan';
+    font-weight: 200 900;
+    font-style: normal;
+    font-stretch: normal;
+    src: url('Spartan-VariableFont_wght.ttf') format('truetype');
          
 }
 
@@ -23,10 +31,12 @@
 
 .dark-bg{
     background: #1B1B1E;
+    
 }
 
 html{
-
+height: 100%;
+background: #1B1B1E;
 }
 body{
     font: 'Dosis', sans-serif;
@@ -34,17 +44,74 @@ body{
     width: 100%;
 }
 .main-centered{
-    position: absolute;
-    width: calc(664px/1440px*100%);
-    left: calc(447px/1440px*100%);
-    top: 20%;
+    position: relative;
+    width: calc(564/1440*100%);
+    margin-left: calc(447/1440*100%);
+    margin-top: 15%;
 }
 
 h1{
     font-family: 'Source Sans 3','Dosis',Arial, Helvetica, sans-serif;
 }
 
+.dark-bg .number{
+    font:  200 7rem 'Dosis', sans-serif;
+    color: #ffffff;
+    opacity: 0.2;
+    
+}
 
+.introduction{
+    margin: 5.8rem 0 0 0 ;
+
+}
+.dark-bg h1{
+    font: 400 5.6rem 'Spartan',sans-serif;
+    color: #ffffff;
+}
+.dark-bg p{
+    font: 400 1.2rem  'Source Sans 3',sans-serif;
+    color: #ffffff;
+}
+.introduction p.orange{
+    color: #EA6118;
+    display: block;
+   
+}
+span.vector1{
+    display: block;
+    border: 1px solid #FFFFFF;
+    width: calc(170/1080*100%);
+    margin: 0 20px;
+}
+
+.square{
+    
+    position: absolute;
+    background-color:#EA6118 ;
+    height: 94px;
+    width: 94px;
+    left: 85%;
+    top: 20%;
+    
+}
+svg.github-icon{
+    filter: invert(1);
+}
+div.social-media a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 24px;
+    width: 24px;
+    margin: 0 calc(8/137.24*200%);
+}
+div.social-media a:first-child{
+    margin-left: 17px;
+}
+
+background: #DB4747;
+mix-blend-mode: lighten;
 /* Template 6-main */
 
 position: relative;
