--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ background: #1B1B1E;
 }
 body{
     font: 'Dosis', sans-serif;
-    position: relative;
+    
     width: 100%;
 }
 .main-centered{
@@ -110,6 +110,35 @@ div.social-media a:first-child{
     margin-left: 17px;
 }
 
+.vert-stripes{
+    position: absolute;
+    width: 300%;
+    height: 0px;
+    left: calc(169/1440*100%);
+    top: 0px;
+    border: 1px solid #FFFFFF;
+    transform: translateX(-50%) rotate(90deg) ;
+    opacity: 0.1;
+    z-index: 0;
+}
+.vert-stripes:nth-child(1){
+    left: calc(359/1440*100%);
+}
+.vert-stripes:nth-child(2){
+    left: calc(547/1440*100%);
+}
+.vert-stripes:nth-child(3){
+    left: calc(735/1440*100%);
+}
+.vert-stripes:nth-child(4){
+    left: calc(923/1440*100%);
+}
+.vert-stripes:nth-child(5){
+    left: calc(1111/1440*100%);
+}
+.vert-stripes:nth-child(6){
+    left: calc(1299/1440*100%);
+}
 background: #DB4747;
 mix-blend-mode: lighten;
 /* Template 6-main */
