--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ background: #1B1B1E;
 }
 body{
     font: 'Dosis', sans-serif;
-    
+    background-color: #1B1B1E;
     width: 100%;
 }
 .main-centered{
@@ -282,7 +282,7 @@ div.about-info ul li{
     
 }
 section.about-me{
-    padding: 9% 0;
+    padding: 9% 0 5% 0;
 }
 .link-icon{
     
@@ -368,4 +368,19 @@ a.icon span.source{
     
     background-image: url(../icons/link.svg);
     
+}
+footer.dark-bg{
+    background-color: #212123;
+}
+footer h2{
+    color: #FFFFFF;
+    font: 400 2.5rem 'Source Sans 3',sans-serif;
+    margin: 2.5rem 0 0 0 ;
+}
+footer div.left-centered{
+    padding-top: 5%;
+}
+footer div.social-media a{
+    flex: 1 1 20%;
+    margin: 0 0 2rem 0;
 }
